# Security

./: .gitignore
ebpf-sensor/: go.mod  go.sum
ebpf-sensor/bpf/: sensor.c
ebpf-sensor/cmd/agent/: bpf_bpfeb.go  bpf_bpfel.go  main.go
ebpf-sensor/pkg/pipeline/: kafka.go
local-responder/: Cargo.toml
local-responder/src/: main.rs
xdr-brain/: docker-compose.yml  ingestor.py  pipeline.py  requirements.txt  show_tables.py
xdr-brain/engine/: ai_interference.py  args_vectorizer.pkl  autoencoder.py  cmd_encoder.pkl  enricher.py  feature_extractor.py  scaler.pkl
xdr-brain/engine/models/: autoencoder.pt
