[package]
name = "local-responder"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build"] }

# The Async runtime (Required for listening to networks in Rust)
tokio = { version = "1.36", features = ["full"] }

# JSON parsing (To read the messages from your Python Brain)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
